Fix the layout shift in search result page

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ html,
 body {
 	scroll-behavior: smooth;
 	transition: all;
+
+	/* position: fixed; */
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
 
 * {
@@ -46,7 +52,7 @@ body {
 }
 @media (min-width: 768px) {
 	body {
-		width: 90%;
+		/* width: 90%; */
 	}
 }
 
